--- a/dyndns-update.service
+++ b/dyndns-update.service
@@ -13,10 +13,13 @@ User=<BENUTZER>
 WorkingDirectory=<PFAD_ZUM_PROJEKT>
 ExecStart=/usr/bin/node <PFAD_ZUM_PROJEKT>/src/dydns-update.js
 
-# Die folgende Zeile sorgt dafür, dass der Dienst neu gestartet wird,
-# falls er fehlschlägt.
+# Lädt die Umgebungsvariablen aus der .env-Datei im Projektverzeichnis
+EnvironmentFile=<PFAD_ZUM_PROJEKT>/.env
+
+# Die folgende Zeile sorgt dafür, dass der Dienst neu gestartet wird.
+# Das Intervall wird aus der .env-Datei gelesen (Standard: 300s).
 Restart=on-failure
-RestartSec=300
+RestartSec=${EXECUTION_INTERVAL}
 
 [Install]
 WantedBy=multi-user.target
